// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SnapShot] Header test  - Auth false 1`] = `
<header>
  <nav>
    <span>
      <a
        href="#"
      >
        Online tester
      </a>
    </span>
  </nav>
</header>
`;

exports[`[SnapShot] Header test  - Auth true 1`] = `
<header>
  <nav>
    <span>
      <a
        href="#"
      >
        Online tester
      </a>
    </span>
    <ul>
      <li>
        <a
          href="#"
        >
          Выйти
        </a>
      </li>
    </ul>
  </nav>
</header>
`;
